Updating sharing model for all full batch rollups, fixed small bug with deferred rollups in attempt to further address #210

--- a/rollup/core/classes/RollupAsyncProcessor.cls
+++ b/rollup/core/classes/RollupAsyncProcessor.cls
@@ -48,7 +48,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
   }
 
   @SuppressWarnings('PMD.UnusedLocalVariable')
-  public abstract inherited sharing class FullRecalcProcessor extends QueueableProcessor {
+  public abstract without sharing class FullRecalcProcessor extends QueueableProcessor {
     protected final String queryString;
     protected final List<Rollup__mdt> rollupInfo;
     protected final Set<Id> recordIds;
@@ -1044,7 +1044,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
         List<SObject> localCalcItems = bag.getAll();
 
         if (hasExceededCurrentRollupLimits(this.rollupControl)) {
-          unprocessedCalcItems = new Map<Id, SObject>(localCalcItems).keySet();
+          unprocessedCalcItems.addAll(new Map<Id, SObject>(localCalcItems).keySet());
           lookupItems.remove(index);
           continue;
         }
