--- a/rollup/core/classes/RollupRelationshipFieldFinder.cls
+++ b/rollup/core/classes/RollupRelationshipFieldFinder.cls
@@ -46,6 +46,15 @@ public without sharing class RollupRelationshipFieldFinder {
   private class CombinedHierarchy {
     private List<Id> oldHierarchy;
     private List<Id> currentHierarchy;
+
+    public Boolean hasEntries() {
+      return this.currentHierarchy?.size() > 0 && this.oldHierarchy?.size() > 0;
+    }
+
+    public Boolean isUltimatelyReparented() {
+      // the last Ids present in the chain have to match, otherwise it's a reparenting
+      return this.currentHierarchy[this.currentHierarchy.size() - 1] != this.oldHierarchy[this.oldHierarchy.size() - 1];
+    }
   }
 
   public class Traversal {
@@ -113,10 +122,8 @@ public without sharing class RollupRelationshipFieldFinder {
         return true;
       }
       CombinedHierarchy combinedHierarchy = this.getHierarchy(record, relationshipFieldName);
-      if (combinedHierarchy.currentHierarchy?.size() > 0 && combinedHierarchy.oldHierarchy?.size() > 0) {
-        // the last Ids present in the chain have to match, otherwise it's a reparenting
-        return combinedHierarchy.currentHierarchy[combinedHierarchy.currentHierarchy.size() - 1] !=
-          combinedHierarchy.oldHierarchy[combinedHierarchy.oldHierarchy.size() - 1];
+      if (combinedHierarchy.hasEntries()) {
+        return combinedHierarchy.isUltimatelyReparented();
       } else {
         // if there was only one hop, we can just compare the Ids. This comparison has to be last
         // because it's possible (as explained below, where the hierarchy is created)
@@ -129,7 +136,7 @@ public without sharing class RollupRelationshipFieldFinder {
 
     public Id getOldLookupId(SObject record, String relationshipFieldName) {
       CombinedHierarchy combinedHierarchy = this.getHierarchy(record, relationshipFieldName);
-      return combinedHierarchy.oldHierarchy?.isEmpty() == false ? combinedHierarchy.currentHierarchy[0] : null;
+      return combinedHierarchy.oldHierarchy?.isEmpty() == false ? combinedHierarchy.oldHierarchy[combinedHierarchy.oldHierarchy.size() - 1] : null;
     }
 
     private CombinedHierarchy getHierarchy(SObject record, String relationshipFieldName) {
@@ -261,9 +268,7 @@ public without sharing class RollupRelationshipFieldFinder {
 
   private SObject getPotentialUltimateParent(SObject childRecord) {
     Map<String, Schema.SObjectField> fieldMap = childRecord.getSObjectType().getDescribe().fields.getMap();
-    this.currentRelationshipName = this.relationshipParts.size() == 1
-      ? this.relationshipParts[0]
-      : this.currentRelationshipName;
+    this.currentRelationshipName = this.relationshipParts.size() == 1 ? this.relationshipParts[0] : this.currentRelationshipName;
     SObjectField lookupField = this.getField(fieldMap, this.currentRelationshipName);
     String relationshipName = lookupField.getDescribe().getRelationshipName();
     if (childRecord.get(this.metadata.UltimateParentLookup__c) != null && childRecord.getPopulatedFieldsAsMap().containsKey(relationshipName)) {
